tests/ui/associated-type.stderr
error[E0223]: ambiguous associated type
  --> tests/ui/associated-type.rs:15:15
   |
15 |     fn f() -> Self::Assoc {}
   |               ^^^^^^^^^^^ help: use the fully-qualified path: `<Struct as Trait>::Assoc`
